Archive2/7f/57777988b01656/output
main.cpp: In function 'main':
main.cpp:12:5: error: implicit declaration of function 'system' [-Wimplicit-function-declaration]
     system(""ls");
     ^
main.cpp:12:14: error: expected ')' before 'ls'
     system(""ls");
              ^
main.cpp:12:16: error: missing terminating " character
     system(""ls");
                ^
main.cpp:12:14: error: missing terminating " character
     system(""ls");
              ^
main.cpp:13:1: error: expected ';' before '}' token
 }
 ^
